# MathWiz

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  README.md  docker-compose.yml
include/: Driver.h  Scanner.h  VariableTable.h  ast.h
include/ast/: Ast.h  AstUtils.h  Boolean.h  Number.h  String.h  Variable.h
include/ast/operators/binary/: AddOperator.h  AndOperator.h  BinaryOperator.h  DivideOperator.h  EqualOperator.h  GreaterEqualOperator.h  GreaterOperator.h  InOperator.h  LessEqualOperator.h  LessOperator.h  MultiplyOperator.h  NotEqualOperator.h  OrOperator.h  SubtractOperator.h
include/ast/operators/unary/: NegateOperator.h  NotOperator.h  UnaryOperator.h
include/visitor/: AstVisitor.h  EvalVisitor.h
src/: Driver.cpp  Scanner.cpp  VariableTable.cpp  ast.cpp  eval.cpp  parser.y  scanner.l
src/ast/: Ast.cpp  AstUtils.cpp  Boolean.cpp  Number.cpp  String.cpp  Variable.cpp
src/ast/operators/binary/: AddOperator.cpp  AndOperator.cpp  BinaryOperator.cpp  DivideOperator.cpp  EqualOperator.cpp  GreaterEqualOperator.cpp  GreaterOperator.cpp  InOperator.cpp  LessEqualOperator.cpp  LessOperator.cpp  MultiplyOperator.cpp  NotEqualOperator.cpp  OrOperator.cpp  SubtractOperator.cpp
src/ast/operators/unary/: NegateOperator.cpp  NotOperator.cpp  UnaryOperator.cpp
src/visitor/: AstVisitor.cpp  EvalVisitor.cpp
